fix: search topper too narrow on chromium browsers

--- a/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-core-cms/trumps/search-elements.css
+++ b/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-core-cms/trumps/search-elements.css
@@ -12,6 +12,7 @@
     /* Table containing search stats and sorting selection options */
     /* remove border from search analytics, add gray background */
     & .gsc-above-wrapper-area {
+        max-width: unset;
         border-bottom: unset;
         margin-inline: -100vw;
         padding-inline: 100vw;
